[package]
name = "rust-demo"
version = "0.1.0"
edition = "2024"
[workspace]
members = ["guessing_game"]
[dependencies]
# Rust 官方推荐使用 clap 或 structopt（structopt 已被合并到 clap 3.x）来解析复杂参数
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }

# 过程宏需要用到的库
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }
async-std = "1.13.2"
